# tiago_dual_robot

./: README.md  q
tiago_dual_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_bringup/config/approach_planner/: approach_planner.yaml.em  approach_planner_custom_no-arm.yaml  approach_planner_custom_pal-gripper_schunk-ft.yaml  approach_planner_custom_schunk-ft_no-arm-right.yaml  approach_planner_custom_schunk-ft_pal-hey5.yaml  approach_planner_no-arm-left_no-ee_schunk-ft.yaml  approach_planner_no-arm-left_pal-gripper_schunk-ft.yaml  approach_planner_no-arm-left_pal-hey5_schunk-ft.yaml  approach_planner_no-arm-left_robotiq-2f-140_schunk-ft.yaml  approach_planner_no-arm_pal-gripper.yaml  approach_planner_no-arm_pal-gripper_schunk-ft.yaml  approach_planner_no-arm_pal-hey5.yaml  approach_planner_no-arm_robotiq-2f-140_schunk-ft.yaml  approach_planner_no-arm_robotiq-2f-85.yaml  approach_planner_no-ee_custom.yaml  approach_planner_no-ee_robotiq-epick.yaml  approach_planner_no-ee_schunk-ft_pal-hey5_schunk-ft.yaml  approach_planner_no-ee_schunk-ft_robotiq-2f-140_schunk-ft.yaml  approach_planner_pal-gripper_no-arm-right.yaml  approach_planner_pal-gripper_no-arm.yaml  approach_planner_pal-gripper_no-ee.yaml  approach_planner_pal-gripper_no-ee_schunk-ft.yaml  approach_planner_pal-gripper_pal-gripper.yaml  approach_planner_pal-gripper_pal-gripper_schunk-ft.yaml  approach_planner_pal-gripper_pal-hey5.yaml  approach_planner_pal-gripper_robotiq-epick.yaml  approach_planner_pal-gripper_schunk-ft_pal-gripper.yaml  approach_planner_pal-gripper_schunk-ft_pal-gripper_schunk-ft.yaml  approach_planner_pal-gripper_schunk-ft_pal-hey5.yaml  approach_planner_pal-gripper_schunk-ft_pal-hey5_schunk-ft.yaml  approach_planner_pal-gripper_schunk-wsg_schunk-ft.yaml  approach_planner_pal-hey5_custom.yaml  approach_planner_pal-hey5_no-arm-right.yaml  approach_planner_pal-hey5_no-arm.yaml  approach_planner_pal-hey5_no-ee_schunk-ft.yaml  approach_planner_pal-hey5_pal-gripper.yaml  approach_planner_pal-hey5_pal-gripper_schunk-ft.yaml  approach_planner_pal-hey5_pal-hey5.yaml  approach_planner_pal-hey5_robotiq-epick.yaml  approach_planner_pal-hey5_schunk-ft_no-arm.yaml  (+14 more)
tiago_dual_bringup/config/joy_teleop/: joy_teleop.yaml.em  joy_teleop_custom_schunk-ft.yaml  joy_teleop_pal-gripper.yaml  joy_teleop_pal-gripper_schunk-ft.yaml  joy_teleop_pal-hey5.yaml  joy_teleop_pal-hey5_schunk-ft.yaml  joy_teleop_robotiq-2f-140.yaml  joy_teleop_robotiq-2f-85.yaml  joy_teleop_robotiq-2f-85_schunk-ft.yaml  joy_teleop_robotiq-epick.yaml  joy_teleop_schunk-wsg.yaml  joy_teleop_schunk-wsg_schunk-ft.yaml
tiago_dual_bringup/config/motion_planner/: motion_planner.yaml.em  motion_planner_custom_pal-hey5_schunk-ft.yaml  motion_planner_custom_schunk-ft_pal-gripper_schunk-ft.yaml  motion_planner_custom_schunk-ft_robotiq-2f-140.yaml  motion_planner_no-arm_pal-gripper_schunk-ft.yaml  motion_planner_no-arm_pal-hey5_schunk-ft.yaml  motion_planner_no-arm_robotiq-2f-140_schunk-ft.yaml  motion_planner_pal-gripper_no-arm.yaml  motion_planner_pal-gripper_pal-gripper.yaml  motion_planner_pal-gripper_schunk-ft_no-ee.yaml  motion_planner_pal-gripper_schunk-ft_pal-hey5.yaml  motion_planner_pal-gripper_schunk-ft_robotiq-2f-140.yaml  motion_planner_pal-hey5_no-arm.yaml  motion_planner_pal-hey5_pal-hey5_schunk-ft.yaml  motion_planner_pal-hey5_schunk-ft_pal-gripper.yaml  motion_planner_pal-hey5_schunk-ft_robotiq-2f-140_schunk-ft.yaml  motion_planner_pal-hey5_schunk-ft_robotiq-epick.yaml  motion_planner_robotiq-2f-140_no-ee_schunk-ft.yaml  motion_planner_robotiq-2f-140_pal-gripper_schunk-ft.yaml  motion_planner_robotiq-2f-140_pal-hey5.yaml  (+4 more)
tiago_dual_bringup/launch/: joystick_teleop.launch  joystick_teleop.launch.py  play_motion.launch  tiago_dual.launch  tiago_dual_bringup.launch  tiago_dual_bringup.launch.py  tiago_dual_play_motion2.launch.py  twist_mux.launch.py
tiago_dual_bringup/module/: joystick.yaml  play_motion2.yaml  twist_mux.yaml
tiago_dual_bringup/scripts/: duplicate_arm.py  regen_em_file.py  regen_em_file.py.orig
tiago_dual_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_controller_configuration/config/: arm_left_controller.yaml  arm_right_controller.yaml  cartesian_impedance_left_arm.yaml  cartesian_impedance_right_arm.yaml  current_limit_controllers.yaml  current_limit_controllers_omni.yaml  forward_velocity_controllers.yaml  ft_sensor_left_controller.yaml  ft_sensor_right_controller.yaml  joint_state_controller_extra_joints_omni.yaml  mobile_base_controller.yaml  pal-hey5_left_joint_trajectory_controllers.yaml  pal-hey5_right_joint_trajectory_controllers.yaml  robotiq-epick_left_joint_effort_controllers.yaml  robotiq-epick_right_joint_effort_controllers.yaml
tiago_dual_controller_configuration/launch/: cartesian_impedance_controller.launch  cartesian_impedance_controller.launch.orig  default_controllers.launch  default_controllers.launch.py  end_effector_controllers.launch  forward_velocity_controllers.launch  gravity_compensation_with_controller_wrist.launch  hey5_controller.launch  impedance_controllers.launch  impedance_controllers.launch.orig  joint_trajectory_controllers_velocity.launch  tiago_dual_controllers.launch  wbc_controllers.launch
tiago_dual_controller_configuration/module/: 10_default_controllers.yaml  30_default_controllers.yaml
tiago_dual_controller_configuration/scripts/: regen_em_file.py
tiago_dual_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_description/config/: show.rviz
tiago_dual_description/launch/: robot_state_publisher.launch.py  show.launch.py
tiago_dual_description/module/: 30_robot_state_publisher.yaml
tiago_dual_description/robots/: show.launch  tiago_dual.urdf.xacro  upload.launch
tiago_dual_description/ros2_control/: ros2_control.urdf.xacro
tiago_dual_description/test/: test_tiago_dual.test
tiago_dual_description/tiago_dual_description/: __init__.py  robot_configuration.py  tiago_config.yaml  tiago_dual_launch_utils.py
tiago_dual_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+267 files in other folders)
