<?xml version="1.0"?>
<package format="3">
  <name>tiago_dual_bringup</name>
  <version>0.4.9</version>
  <description>Launch files to upload the TIAGo Dual robot description and start the controllers</description>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <exec_depend>pmb2_bringup</exec_depend>
  <exec_depend>tiago_bringup</exec_depend>
  <exec_depend>tiago_dual_controller_configuration</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
