<?xml version="1.0"?>
<package format="3">
  <name>tiago_dual_bringup</name>
  <version>2.0.2</version>
  <description>Launch files to upload the TIAGo Dual robot description and start the controllers</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <author email="david.terkuile@pal-robotics.com">David ter Kuile</author>
  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/pal-robotics/tiago_dual_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <exec_depend>pmb2_bringup</exec_depend>
  <exec_depend>tiago_bringup</exec_depend>
  <exec_depend>tiago_dual_controller_configuration</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
