<?xml version="1.0"?>
<package format="3">
  <name>tiago_dual_controller_configuration</name>
  <version>2.0.3</version>
  <description>Configuration and launch files of TIAGo Dual 's controllers</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <author email="david.terkuile@pal-robotics.com">David ter Kuile</author>
  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/pal-robotics/tiago_dual_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>tiago_controller_configuration</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
