<?xml version="1.0"?>
<package format="3">

  <name>tiago_dual_description</name>
  <version>0.3.8</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the TIAGO robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend condition="$PAL_DISTRO > 0">omni_base_description</exec_depend>
  <exec_depend>tiago_description</exec_depend>
  <exec_depend>hey5_description</exec_depend>
  <exec_depend>pal_gripper_description</exec_depend>
  <exec_depend>pal_robotiq_85_description</exec_depend>
  <exec_depend>pal_robotiq_140_description</exec_depend>
  <exec_depend>pal_robotiq_epick_description</exec_depend>
  <exec_depend>pal_wsg_gripper_description</exec_depend>
  <exec_depend>tiago_dual_description_calibration</exec_depend>
  <exec_depend>custom_dual_ee_description</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>

</package>
