<?xml version="1.0"?>
<package format="3">
  <name>tiago_dual_robot</name>
  <version>0.4.14</version>
  <description>Description and controller configuration of TIAGo</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tiago_dual_description</exec_depend>
  <exec_depend>tiago_dual_controller_configuration</exec_depend>
  <exec_depend>tiago_dual_bringup</exec_depend>

  <export>
     <metapackage/>
  </export>
</package>
