<?xml version="1.0"?>
<package format="3">
  <name>tiago_dual_robot</name>
  <version>2.0.0</version>
  <description>Description and controller configuration of TIAGo</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <author email="david.terkuile@pal-robotics.com">David ter Kuile</author>
  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>

  <url type="website">https://github.com/pal-robotics/tiago_dual_simulation</url>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tiago_dual_description</exec_depend>
  <exec_depend>tiago_dual_controller_configuration</exec_depend>
  <exec_depend>tiago_dual_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
